--- a/main.css
+++ b/main.css
@@ -1,42 +1,74 @@
+
+html, body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-weight: 300;
+  line-height: 1.5;
+}
+
 body {
-	height: 100%;
-	margin: 0;
-	text-align: center;
-	width: 100%;
+  font-family: 'Lato', sans-serif;
 }
 
-h1 {
-	font-size: 32px;
-  font-family: Palatino, 'Palatino Linotype', serif;
-  color: rgb(121,149,117);
+.page-title {
+  text-align: left;
+  font-weight: 100;
 }
 
-h2 {
-	font-size: 56px;
+.page-description {
+  text-align: center;
+  padding: 30px;
 }
 
-
-.hero {
-	padding: 250px 0;
-	margin: 30px;
-  font-family: 'Trebuchet MS', Helvetica, sans-serif;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-2/bg.jpg");
-  background-size: cover;
-  color: #ffffff;
+section .row img {
+  margin: 0 0 30px;
+  width: 100%;
 }
 
-
-p {
- font-size: 2rem;
+.col-md-6 {
+  margin: 0 0 30px;
 }
 
-.hero a {
-	color: #00FFAA;
-	font-size: 1.25em;
-	text-decoration: none;
+/* FOOTER NAVIGATION */
+
+nav {
+  background-color: #E4ECF3;
 }
 
-#footer{
-  font-size: 0.75rem;
+nav li {
+  margin: 0;
+  padding: 0 10px;
+  display: inline;
+}
+
+nav li a:active {
+  background-color: #ffffff;
+}
+nav ul {
+  display: inline;
+}
+
+.contact-btn {
+  float: right;
+}
+
+.contact-btn a {
+  margin-right: 30px;
+  padding: 8px 18px;
+  border: 1px solid #204156;
+
+}
+
+.contact-btn a:active {
+  position: relative;
+  bottom: 2px;
+}
+
+nav a {
+  height: 60px;
+  line-height: 60px;
+  color: #204156;
+  text-decoration: none;
 }
 
